# gz-fuel-rs

./: Cargo.toml
src/: fuel_client.rs  lib.rs  main.rs
