[package]
name = "gz-fuel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "*"
serde = "1"
serde_json = "*"
dirs = "*"
itertools = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = { version = "2.3", default-features = false, features = ["wasm-client", "encoding"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2.3" }
